syntax = "proto3";

option java_multiple_files = true;
option java_package = "mypkg";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  string id = 1;
}

message UserResponse {
  string name = 1;
}
